@@ -46,7 +46,6 @@ class TemplatesController extends JController
 		// Check for request forgeries
 		JRequest::checkToken() or jexit(JText::_('JInvalid_Token'));
 
-		$option		= JRequest::getVar('option', '', '', 'cmd');
 		$params		= JRequest::getVar('params', array(), 'post', 'array');
 
 		$model = $this->getModel('template');
@@ -55,7 +54,7 @@ class TemplatesController extends JController
 		$id			= &$model->getId();
 
 		if (!$template) {
-			$this->setRedirect('index.php?option='.$option.'&client='.$client->id, JText::_('Operation Failed').': '.JText::_('No template specified.'));
+			$this->setRedirect('index.php?option=com_templates&client='.$client->id, JText::_('Operation Failed').': '.JText::_('No template specified.'));
 			return;
 		}
 
@@ -65,49 +64,47 @@ class TemplatesController extends JController
 			$msg = JText::_('Error Saving Template') . $model->getError();
 		}
 
-		$this->setRedirect('index.php?option='.$option.'&task=edit&template='.$template.'&id='.$id.'&client='.$client->id, $msg);
+		$this->setRedirect('index.php?option=com_templates&task=edit&template='.$template.'&id='.$id.'&client='.$client->id, $msg);
 	}
 
 	function cancel()
 	{
 		// Initialize some variables
-		$option	= JRequest::getCmd('option');
 		$client	= &JApplicationHelper::getClientInfo(JRequest::getVar('client', '0', '', 'int'));
 
-		$this->setRedirect('index.php?option='.$option.'&client='.$client->id);
+		$this->setRedirect('index.php?option=com_templates&client='.$client->id);
 	}
 
 	/*
 	 * Add Template Style
 	 */
-	function add() {
+	function add()
+	{
 
 		// Check for request forgeries
 		JRequest::checkToken() or jexit(JText::_('JInvalid_Token'));
-		$option		= JRequest::getVar('option', '', '', 'cmd');
 
 		$model = $this->getModel('template');
 		$client		= &$model->getClient();
 		$template	= &$model->getTemplate();
 
 		if (!$template) {
-			$this->setRedirect('index.php?option='.$option.'&client='.$client->id, JText::_('Operation Failed').': '.JText::_('No template specified.'));
+			$this->setRedirect('index.php?option=com_templates&client='.$client->id, JText::_('Operation Failed').': '.JText::_('No template specified.'));
 			return;
 		}
 		$msg = JText::_('Template Added');
 		$newid = $model->add();
-		$this->setRedirect('index.php?option='.$option.'&task=edit&template='.$template.'&id='.$newid.'&client='.$client->id, $msg);
+		$this->setRedirect('index.php?option=com_templates&task=edit&template='.$template.'&id='.$newid.'&client='.$client->id, $msg);
 
 	}
 
 	/*
 	 * Delete Template Style
 	 */
-	function delete() {
+	function delete()
+	{
 		// Check for request forgeries
 		//JRequest::checkToken() or jexit(JText::_('JInvalid_Token'));
-
-		$option		= JRequest::getVar('option', '', '', 'cmd');
 
 		$model = $this->getModel('template');
 		$client		= &$model->getClient();
@@ -116,7 +113,7 @@ class TemplatesController extends JController
 
 
 		if (!$template) {
-			$this->setRedirect('index.php?option='.$option.'&client='.$client->id, JText::_('Operation Failed').': '.JText::_('No template specified.'));
+			$this->setRedirect('index.php?option=com_templates&client='.$client->id, JText::_('Operation Failed').': '.JText::_('No template specified.'));
 			return;
 		}
 
@@ -125,7 +122,7 @@ class TemplatesController extends JController
 		} else {
 			$msg = JText::_('Error Saving Template') . $model->getError();
 		}
-		$this->setRedirect('index.php?option='.$option.'&task=edit&template='.$template.'&client='.$client->id, $msg);
+		$this->setRedirect('index.php?option=com_templates&task=edit&template='.$template.'&client='.$client->id, $msg);
 	}
 
 	/*
@@ -137,25 +134,22 @@ class TemplatesController extends JController
 //TODO: FIX TOKEN
 		//JRequest::checkToken() or jexit(JText::_('JInvalid_Token'));
 
-		$option		= JRequest::getVar('option', '', '', 'cmd');
+		$clientId	= JRequest::getInt('client_id');
+		$id			= JRequest::getInt('id');
+		$model 		= $this->getModel('template');
 
-		$model = $this->getModel('template');
-		$client		= &$model->getClient();
-		$template	= &$model->getTemplate();
-		$id			= &$model->getId();
-
-		if (!$template) {
-			$this->setRedirect('index.php?option='.$option.'&client='.$client->id, JText::_('Operation Failed').': '.JText::_('No template specified.'));
+		if (empty($id)) {
+			$this->setRedirect('index.php?option=com_templates&view=templates&client='.$clientId, JText::_('Operation Failed').': '.JText::_('No template specified.'));
 			return;
 		}
 
-		if ($model->setDefault()) {
+		if ($model->setDefault($id, $clientId)) {
 			$msg = JText::_('Template Saved');
 		} else {
 			$msg = JText::_('Error Saving Template') . $model->getError();
 		}
 
-		$this->setRedirect('index.php?option='.$option.'&task=edit&cid[]='.$id.'&client='.$client->id, $msg);
+		$this->setRedirect('index.php?option=com_templates&view=templates&client='.$clientId, $msg);
 	}
 	/**
 	* Preview Template
@@ -185,7 +179,6 @@ class TemplatesController extends JController
 		JRequest::checkToken() or jexit(JText::_('JInvalid_Token'));
 
 		// Initialize some variables
-		$option			= JRequest::getCmd('option');
 		$filecontent	= JRequest::getVar('filecontent', '', 'post', 'string', JREQUEST_ALLOWRAW);
 
 		$model = $this->getModel('source');
@@ -193,12 +186,12 @@ class TemplatesController extends JController
 		$template	= &$model->getTemplate();
 
 		if (!$template) {
-			$this->setRedirect('index.php?option='.$option.'&client='.$client->id, JText::_('Operation Failed').': '.JText::_('No template specified.'));
+			$this->setRedirect('index.php?option=com_templates&client='.$client->id, JText::_('Operation Failed').': '.JText::_('No template specified.'));
 			return;
 		}
 
 		if (!$filecontent) {
-			$this->setRedirect('index.php?option='.$option.'&client='.$client->id, JText::_('Operation Failed').': '.JText::_('Content empty.'));
+			$this->setRedirect('index.php?option=com_templates&client='.$client->id, JText::_('Operation Failed').': '.JText::_('Content empty.'));
 			return;
 		}
 
@@ -212,12 +205,12 @@ class TemplatesController extends JController
 		switch($task)
 		{
 			case 'apply_source':
-				$this->setRedirect('index.php?option='.$option.'&client='.$client->id.'&task=edit_source&template='.$template, $msg);
+				$this->setRedirect('index.php?option=com_templates&client='.$client->id.'&task=edit_source&template='.$template, $msg);
 				break;
 
 			case 'save_source':
 			default:
-				$this->setRedirect('index.php?option='.$option.'&client='.$client->id.'&task=edit&template='.$template, $msg);
+				$this->setRedirect('index.php?option=com_templates&client='.$client->id.'&task=edit&template='.$template, $msg);
 				break;
 		}
 	}
@@ -253,7 +246,6 @@ class TemplatesController extends JController
 		JRequest::checkToken() or jexit(JText::_('JInvalid_Token'));
 
 		// Initialize some variables
-		$option			= JRequest::getCmd('option');
 		$filecontent	= JRequest::getVar('filecontent', '', 'post', 'string', JREQUEST_ALLOWRAW);
 
 		$model = $this->getModel('cssedit');
@@ -262,12 +254,12 @@ class TemplatesController extends JController
 		$filename	= &$model->getFilename();
 		$template 	= &$model->getTemplate();
 		if (!$template) {
-			$this->setRedirect('index.php?option='.$option.'&client='.$client->id, JText::_('Operation Failed').': '.JText::_('No template specified.'));
+			$this->setRedirect('index.php?option=com_templates&client='.$client->id, JText::_('Operation Failed').': '.JText::_('No template specified.'));
 			return;
 		}
 
 		if (!$filecontent) {
-			$this->setRedirect('index.php?option='.$option.'&client='.$client->id, JText::_('Operation Failed').': '.JText::_('Content empty.'));
+			$this->setRedirect('index.php?option=com_templates&client='.$client->id, JText::_('Operation Failed').': '.JText::_('Content empty.'));
 			return;
 		}
 
@@ -281,12 +273,12 @@ class TemplatesController extends JController
 		switch($task)
 		{
 			case 'apply_css':
-				$this->setRedirect('index.php?option='.$option.'&client='.$client->id.'&task=edit_css&template='.$template.'&id='.$id.'&filename='.$filename, $msg);
+				$this->setRedirect('index.php?option=com_templates&client='.$client->id.'&task=edit_css&template='.$template.'&id='.$id.'&filename='.$filename, $msg);
 				break;
 
 			case 'save_css':
 			default:
-				$this->setRedirect('index.php?option='.$option.'&client='.$client->id.'&task=edit&template='.$template, $msg);
+				$this->setRedirect('index.php?option=com_templates&client='.$client->id.'&task=edit&template='.$template, $msg);
 				break;
 		}
 	}
